<resources>
    <string name="app_name">Tipster</string>

    <string name="amount">Amount</string>
    <string name="amount_hint">Amount</string>
    <string name="tip">Tip</string>
    <string name="percent_tip_hint">Tip %</string>
    <string name="tip_hint">Tip $</string>

    <string name="usd">$%.2f</string>

    <string name="total">Total:</string>
    <string name="usd_placeholder">$0.0</string>
    <string name="banner_ad_unit_id">ca-app-pub-8930863167049094/4301412831</string>
    <string name="add_person">Add person</string>
    <string name="remove_person">Remove person</string>
    <string name="per_person">Per person:</string>
    <string name="split">Split:</string>
    <string name="people_placeholder">1</string>
    <string name="two_decimal_places">%.2f</string>
    <string name="donate">Donate</string>
</resources>
