<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/amount_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/amount_text_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount_hint"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tip_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/amount_container"
                android:layout_margin="8dp"
                android:baselineAligned="false">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/percent_tip_text_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/percent_tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/percent_tip_hint"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tip_text_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tip_hint"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/total_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tip_container"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/total"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/usd_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/people_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/total_container">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/split"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/remove_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/remove_person"
                    android:src="@drawable/ic_remove_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/people_text_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/people"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="@string/people_placeholder" />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/add_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/add_person"
                    android:src="@drawable/ic_add_black_24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/person_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/people_container"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/person_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/per_person"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/usd_placeholder"
                    android:textSize="18sp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</LinearLayout>